...
            icon: Icons.home,
            label: '首页',
          ),
          _buildSwitchButton(
            type: ComponentType.chat,
            icon: Icons.chat_bubble_rounded,
            label: '对话',
          ),
          _buildSwitchButton(
            type: ComponentType.savedBlackboards,
            icon: Icons.dashboard_rounded,
            label: '已保存黑板',
          ),
...
